review the implementation of equals and hashCode ... they must include the messageExchangePattern, too
git-svn-id: https://svn.codehaus.org/mule/branches/mule-3.x@18426 bf997673-6b11-0410-b953-e057580c5b09